Updated font-size to prevent zoom on mobile

--- a/src/css/formControls.css
+++ b/src/css/formControls.css
@@ -20,6 +20,7 @@
     padding: 5px;
     text-align: center;
     border-radius: 5px;
+    font-size: 16px;
 }
 
 .player-row {
